--- a/index.html
+++ b/index.html
@@ -10,16 +10,19 @@
         <h1 class="text-4xl font-bold flex justify-center py-5">TIC-TAC-TOE</h1>
         <div id="hideInput" class="flex flex-col items-center pb-5 gap-5">
             <input
+                id="inputP1"
                 type="text"
                 class="text-center"
                 placeholder="Enter player 1 name..."
             />
             <input
+                id="inputP2"
                 type="text"
                 class="text-center"
                 placeholder="Enter player 2 name..."
             />
             <button
+                id="submitBtn"
                 class="bg-slate-600 px-10 py-2 rounded-lg cursor-pointer border-1 border-transparent uppercase font-semibold hover:shadow-md hover:scale-[102%] hover:border-white transition-all"
             >
                 SUBMIT
@@ -85,5 +88,7 @@
                 </button>
             </div>
         </section>
+
+        <script src="app.js"></script>
     </body>
 </html>
